# cuda_ros2_kinematics

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml  record_sim.sh  run_guide.md
cuda_kernels/: batch_fk_kernel.cu  cuda_kinematics.hpp  ik_solver_kernel.cu  jacobian_kernel.cu
cuda_kernels/benchmarks/: batch_fk_benchmark.cpp  ik_benchmark.cpp  jacobian_benchmark.cpp
docker/: entrypoint.sh
docs/: architecture.md  docker.md
kinematics_lib/include/kinematics_lib/: dh_parameters.hpp  kinematics_solver.hpp
kinematics_lib/src/: kinematics_solver.cpp
kinematics_lib/tests/: test_fk.cpp  test_ik.cpp
results/: bag_summary.txt  benchmark_run1_20260517_113729.txt  benchmark_run2_20260517_113731.txt  benchmark_run3_20260517_113733.txt  system_info.txt
results/custom/: topic_snapshot.txt
results/default/: topic_snapshot.txt
ros2_nodes/launch/: arm_bringup.launch.py
ros2_nodes/rviz/: arm_view.rviz
ros2_nodes/src/: joint_command_publisher.cpp  state_publisher.cpp  trajectory_planner.cpp
ros2_nodes/urdf/: cuda_arm.urdf
trajectories/: custom.csv
trajectories/custom_session/: custom_session_0.db3  metadata.yaml
trajectories/default_session/: default_session_0.db3  metadata.yaml
